java: villages-fixer: updates and cleanup